fix up drs server to work with drs client
